.labs/Local-Kubernetes/ml-pipeline/manifests/evidently/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evidently
spec:
  type: ClusterIP
  selector:
    app: evidently
  ports:
    - name: http
      port: 8000
      targetPort: 8000
